--- a/overview.css
+++ b/overview.css
@@ -11,9 +11,22 @@ body{
 .poke-box{
     border-radius: 5px;
     background-color: white;
-    width: 150px;
-    height: 100px;
+    width: 200px;
+    height: 150px;
     margin: 5px;
     padding: 5px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.poke-img{
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+    margin: 10px;
+}
+
+h2{
+    margin-bottom: 0;
 }
