--- a/overview.css
+++ b/overview.css
@@ -1,11 +1,12 @@
 body{
     margin: 0;
-    background-color: rgb(243, 235, 225);
+    background-color: rgb(236 236 235);
     padding: 20px;
 }
 .content-container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .poke-box{
@@ -19,14 +20,30 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 .poke-img{
     width: 80px;
     height: 80px;
     object-fit: contain;
     margin: 10px;
+    /* box-shadow: inset #ffffffa1 20px -30px 20px 0px;
+    border-radius: 10px;  */
+    position: relative;
+}
+.img-bg{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    box-shadow: inset white -8px 20px 20px 16px;
+    position: absolute;
+    top: 60px;
+    left: 70px;
 }
 
 h2{
     margin-bottom: 0;
+}
+h1 {
+    text-align: center;
 }
