--- a/overview.css
+++ b/overview.css
@@ -1,17 +1,18 @@
-body{
+body {
     margin: 0;
     background-color: rgb(236 236 235);
     padding: 20px;
 }
-.content-container{
+
+.content-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.poke-box{
+.poke-box {
     border-radius: 5px;
-    background-color: white;
+    color: white;
     width: 200px;
     height: 150px;
     margin: 5px;
@@ -21,8 +22,13 @@ body{
     flex-direction: column;
     align-items: center;
     position: relative;
+    cursor: pointer;
 }
-.poke-img{
+.poke-box:hover{
+    opacity:0.5;
+}
+
+.poke-img {
     width: 80px;
     height: 80px;
     object-fit: contain;
@@ -31,7 +37,8 @@ body{
     border-radius: 10px;  */
     position: relative;
 }
-.img-bg{
+
+.img-bg {
     width: 100px;
     height: 100px;
     border-radius: 100%;
@@ -41,9 +48,10 @@ body{
     left: 70px;
 }
 
-h2{
+h2 {
     margin-bottom: 0;
 }
+
 h1 {
     text-align: center;
 }
