--- a/pokeDetail.css
+++ b/pokeDetail.css
@@ -27,11 +27,13 @@ body {
     display: flex;
     align-items: center;
 }
+
 .back img {
     filter: invert(1);
     width: 30px;
     padding-right: 10px;
 }
+
 .back:hover {
     text-decoration: underline;
 }
@@ -142,11 +144,11 @@ body {
     flex-direction: row;
 }
 
-.evolution-img{
+/* .evolution-img {
     width: 100px;
-}
+} */
 
-.evo-img-bg{
+.evo-img-bg {
     border-radius: 100%;
     background-color: #eceff1;
     width: 120px;
@@ -155,8 +157,40 @@ body {
     justify-content: center;
 }
 
-.evo-wrapper{
+.evo-wrapper {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    /* width: 100%; */
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
+.species-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.species-name {
+    padding-top: 20px;
+    text-align: center;
+}
+
+.trigger-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.trigger-wrapper img {
+    width: 80px;
+    height: 20px;
+}
+
+#evoImgWrapper {
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    width: 100%;
 }
