--- a/pokeDetail.css
+++ b/pokeDetail.css
@@ -95,12 +95,14 @@ body {
 .inner-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     margin-top: 30px;
     /* padding: 10px; */
     padding-left: 50px;
     padding-right: 20px;
+    padding-bottom: 20px;
 }
+
 
 .info {
     padding: 10px;
